0.8.1
- Bugfixes:
  - KeyError when isoelastics not defined for combination of axes (#177)
0.8.0
- Remember directory for searching missing measurement data
- Bugfixes:
  - Cannot open old session files with hierarchies when the measurement
    data location has changed (#174)
  - Cannot open polygon filters exported with ShapeOut versions < 0.7.6 (#174)
- Code cleanup:
  - Move program-relevant data to "shapeout" directory
  - Move computation of isoelastics to dclab (dclab 0.2.6.dev23)
  - Create separate directory for appveyor recipe
  - Remove unused/incomplete support for internationalization
0.7.9
- Add on-the-fly computation of contour inertia ratios
- Add menu options to save current event image (#164)
- Bugfixes:
  - Isoelastics are not shown (#145)
0.7.8
- Introduce unique identifiers for measurements (dclab 0.2.5.dev4)
- Include ffmpeg in the Windows installer (#165)
- Bugfixes:
  - dclab 0.2.6.dev2: Correctly identify contour files (#166, #169)
  - dclab 0.2.5.dev11: Allow contour data indices larger than uint8 (#167)
- Refactoring:
  - dclab 0.2.5.dev10: Event images are returned as 2D ndarray
0.7.7
- Add "Preferences" menu:
  - Allow to (dis/en)able session autosaving
  - Allow to (dis/en)able checking for updates
  - Allow to (dis/en)able expert mode (#157)
- Bugfixes:
  - Hidden axes ("area_cvx", "area_msd", "frame") visible in analysis tab
  - Display of fluorescence traces broken (#159)
  - Display of contour plots broken (#160)
  - Error when loading sessions created with version 0.7.6 on Windows
  - dclab 0.2.5.dev1: Automatically fix ancillary column sizes
  - dclab 0.2.5.dev2: Correctly distinguish b/w hierarchy children of same parent
0.7.6
- Add on-the-fly computation of average and SD for brightness
- Bugfixes:
  - Save sessions with deep (>1) hierarchies correctly
  - Better backwards compatibility for old session files
- Refactoring (dclab 0.2.5):
  - New standard column names
  - New class for handling filtering